# openff-interchange

./: .codecov.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  LICENSE-3RD-PARTY  MANIFEST.in  README.md  appveyor.yml  environment.yml  pixi.toml  postBuild  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  versioneer.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  USER_SUPPORT.md
.github/workflows/: beta.yaml  changes.yaml  check-openmm-rc.yaml  ci-pydantic-latest.yaml  ci.yaml  ci_minimal.yaml  cron.yaml  examples.yaml  integration_tests.yaml  lint.yaml  test-openmm-rc.yaml
benchmarks/: README.md  large-peg.py  ligand-in-water.py  mixed-solvent.py  protein-in-water.py  run.sh  summarize.py
benchmarks/0.4.8/: large_peg.csv  ligand_in_water.csv  mixed_solvent.csv  protein_in_water.csv
devtools/: README.md
devtools/conda-envs/: beta_env.yaml  dev_env.yaml  docs_env.yaml  examples_env.yaml  intermol_env.yaml  minimal_env.yaml  test_env.yaml  test_not_py313.yaml
devtools/github-actions/: initialize_conda.sh
devtools/scripts/: molecule-regressions.py  run_regression_tests.sh
docs/: Makefile  README.md  annotations.md  api.rst  conf.py  design.md  developing.md  energy_tests.md  environment.yml  foo.md  getting_started.rst  index.md  index.rst  installation.md  make.bat  openff.interchange.components.rst  openff.interchange.drivers.rst  openff.interchange.interop.internal.rst  openff.interchange.rst  openff.system.components.rst  openff.system.interop.rst  openff.system.rst  readthedocs.yml  releasehistory.md  releasehistory.rst  requirements.txt  v0.4-changes.md
docs/_static/: README.md
docs/_templates/: README.md
docs/_templates/autosummary/: base.rst  class.rst  module.rst
docs/using/: advanced.md  amber.md  charmm.md  collections.md  construction.md  design.md  edges.md  energy_tests.md  experimental.md  gromacs.md  handlers.md  intro.md  lammps.md  migrating.md  openmm.md  output.md  plugins.md  serialization.md  status.md
examples/: README.md  SMIRNOFF_simulation.ipynb  conformer_energies.ipynb  optimize-with-jax.ipynb  packed_box.ipynb  parameter_replacement.ipynb  parameter_splitting.ipynb  smirnoff_argon.ipynb  smirnoff_ethanol.ipynb  solvated-nanoparticle.ipynb
examples/amber/: .gitignore  amber.ipynb
examples/conformer_energies/: README.md  conformer_energies.ipynb
examples/deprecated/: optimize-with-jax.ipynb  parameter_replacement.ipynb  parameter_splitting.ipynb
examples/deprecated/foyer-showcase/: oplsaa_switchable.xml  solvated-nanoparticle.ipynb
examples/experimental/: openmmforcefields.ipynb
examples/experimental/openmm-import/: protein-ligand.ipynb
examples/experimental/openmmforcefields/: gaff.ipynb  smirnoff.ipynb
examples/experimental/solvate/: .gitignore  README.md  solvate.ipynb
examples/experimental/sovlate/: sovlate.ipynb
examples/foyer-showcase/: silica_nanoparticle.json  solvated-nanoparticle.ipynb
examples/host-guest/: OA.mol2  README.md  guest.sdf  host.sdf  host_guest.ipynb
examples/lammps/: .gitignore  README.md  lammps.ipynb
examples/ligand_in_water/: .gitignore  README.md  ligand_in_water.ipynb  run.mdp  tip5p.offxml
examples/load-SAMPL6/: README.md  load-SAMPL6.ipynb
examples/openmm/: .gitignore  README.md  openmm.ipynb
examples/openmm-import/: README.md  protein-ligand.ipynb
examples/packed_box/: .gitignore  README.md  packed_box.ipynb
examples/parameter_replacement/: parameter_replacement.ipynb
examples/protein_ligand/: .gitignore  README.md  protein_ligand.ipynb
examples/vectorized_representations/: README.md  vectorized_representations.ipynb
examples/virtual_sites/: .gitignore  4_site_water.xml  5_site_water.xml  README.md  example-vsites-parameters-forcefield.offxml  ligand.xml  planar_carbonyl.xml  sigma_hole.xml  tip5p.offxml  trivalent_nitrogen.xml  virtual_sites.ipynb  visualize.ipynb  viz.ipynb
openff/interchange/: __init__.py  _annotations.py  _experimental.py  _pydantic.py  _version.py  conftest.py  constants.py  exceptions.py  models.py  packmol.py  pydantic.py  serialization.py  stubs.py  types.py  utils.py  warnings.py
openff/interchange/_testing/: utils.py
openff/interchange/_tests/: __init__.py  _gromacs.py  _openmm.py  conftest.py  test_deprecations.py  test_issues.py
openff/interchange/common/: _nonbonded.py  _positions.py  _topology.py  _valence.py
openff/interchange/components/: _base.py  _packmol.py  _particles.py  _viz.py  base.py  foyer.py  interchange.py  mbuild.py  mdconfig.py  mdtraj.py  nonbonded.py  packmol.py  particles.py  potentials.py  smirnoff.py  toolkit.py
openff/interchange/data/: trim_drug_bank.py
openff/interchange/drivers/: __init__.py  all.py  amber.py  gromacs.py  lammps.py  openmm.py  report.py  utils.py
openff/system/: __init__.py  _version.py  exceptions.py  misc.py  models.py  potential.py  stubs.py  system.py  types.py  utils.py
plugins/: nonbonded_plugins.py  pyproject.toml  setup.cfg  setup.py
plugins/nonbonded_plugins/: __init__.py  nonbonded.py  virtual_sites.py
regression_tests/: README.md  default-comparison-settings.json  old-toolkit-env.txt  toolkit-to-interchange.json
regression_tests/small-molecule/: dataset.smi  input-topologies.json
scratch/: example.py
spec/: The-OpenFF-System.md
stubs/: panedr.pyi
stubs/foyer/: __init__.py  atomtyper.pyi  exceptions.pyi  forcefield.pyi  topology_graph.pyi
stubs/mbuild/: __init__.pyi
stubs/mdtraj/: __init__.pyi
stubs/nglview/: __init__.pyi
system/: __init__.py  _version.py  collections.py  exceptions.py  potential.py  system.py  utils.py
system/tests/: base_test.py  test_external.py  test_matrix_representations.py  test_potential.py  test_system.py  test_types.py  test_typing.py  test_utils.py
system/typing/: smirnoff.py
workshops/2022/: .gitignore  Construction.ipynb  Exploration.ipynb  Exports.ipynb  Units.ipynb  Workshop.ipynb
(+367 files in other folders)
