[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools",
  "setuptools-scm>=8",
]

[project]
name = "openff-interchange"
description = "A project (and object) for storing, manipulating, and converting molecular mechanics data."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Open Force Field Initiative", email = "info@openforcefield.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]

[tool.setuptools.packages.find]
include = [ 'openff.interchange*' ]
exclude = [ 'openff.interchange._tests.data*' ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 119
namespace-packages = [ "openff/interchange/" ]

lint.per-file-ignores."openff/interchange/**/__init__.py" = [ "F401" ]
lint.per-file-ignores."openff/interchange/*_pydantic.py" = [ "F401" ]
lint.per-file-ignores."openff/interchange/_tests/*" = [ "RUF015" ]
lint.per-file-ignores."openff/interchange/_tests/data/*" = [ "INP001" ]
lint.per-file-ignores."openff/interchange/_tests/unit_tests/test_types.py" = [ "F821" ]
lint.per-file-ignores."openff/interchange/components/*.py" = [ "F821" ]
lint.per-file-ignores."openff/interchange/components/interchange.py" = [ "F821" ]
lint.per-file-ignores."openff/interchange/foyer/_guard.py" = [ "F401" ]
lint.per-file-ignores."openff/interchange/foyer/_nonbonded.py" = [ "F821" ]
lint.per-file-ignores."openff/interchange/smirnoff/_*.py" = [ "RUF015" ]
lint.per-file-ignores."openff/interchange/smirnoff/_gbsa.py" = [ "F821" ]
lint.per-file-ignores."openff/interchange/smirnoff/_nonbonded.py" = [ "F821" ]
lint.per-file-ignores."openff/interchange/smirnoff/_virtual_sites.py" = [ "F821" ]
lint.per-file-ignores."plugins/*" = [ "INP001" ]
lint.isort.known-first-party = [ "openff.interchange" ]
# can't find a clean way to get Rust's globset to handle this via regex ...
lint.isort.known-third-party = [ "openff.toolkit", "openff.utilities", "openff.units" ]
lint.pydocstyle.property-decorators = [ "validator" ]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--cov=openff/interchange --cov-report=xml --ignore=examples/experimental --ignore=examples/amber"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

[tool.coverage.run]
omit = [
  "*/*/_tests/*",
]

[tool.mypy]
mypy_path = "stubs/"
python_version = "3.11"
plugins = "pydantic.mypy"
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true
exclude = 'openff/interchange/_tests'

[[tool.mypy.overrides]]
module = [
  "pyedr",
  "networkx",
  "openmm",
  "openmm.app",
  "openmm.app.element",
  "openmm.unit",
  "intermol.*",
  "rdkit",
  "openff.toolkit.*",
  "openff.units.*",
  "openff.utilities.*",
  "openff.recharge.*",
  "openff.nagl_models.*",
  "parmed",
  "parmed.amber",
  "pmdtest.utils",
  "pytest",
  "pint",
  "unyt",
  "openeye",
  "jax",
  "scipy.spatial",
  "nonbonded_plugins.*",
  "lammps",
]
ignore_missing_imports = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = true
ignore-regex = [ "^Test.*", "test_.*", "^_.*" ]
fail-under = 90

[tool.pixi.dependencies]
pip = "*"
numpy = ">=2.2"
setuptools_scm = "*"
pydantic = "=2"
openff-toolkit-base = "0.18.*"
openff-interchange-base = ">=0.4.5"
rdkit = ">=2024"
openmm = "8.4.*"

[tool.pixi.environments]
py311amber = [ "py311", "test", "typing", "ambertools", "mosdef" ]
py311openeye = [ "py311", "openeye", "test", "typing", "regression_tests", "engines" ]
py311examples = [ "py311", "openeye", "test", "engines", "examples" ]
py312amber = [ "py312", "test", "typing", "ambertools", "mosdef" ]
py312openeye = [ "py312", "openeye", "test", "typing", "regression_tests", "engines" ]
py312examples = [ "py312", "openeye", "test", "engines", "examples" ]
py313openeye = [ "py313", "openeye", "test", "typing", "regression_tests", "engines" ]
py313examples = [ "py313", "openeye", "test", "engines", "examples" ]
py311etc = [ "py311", "openeye", "mosdef", "test", "typing", "etc" ]
py312etc = [ "py312", "openeye", "mosdef", "test", "typing", "etc" ]
dev = [ "py312", "openeye", "test", "typing", "dev", "engines" ]
betas = [ "py311", "test", "typing", "engines", "betas" ]
[tool.pixi.feature.ambertools.dependencies]
ambertools = "24.*"
numpy = "2.2.*"

[tool.pixi.feature.betas]
channels = [ "openeye/label/rc", "conda-forge/label/openmm_rc", "openeye", "conda-forge" ]
dependencies = { openeye-toolkits = "*", openmm = "*" }

[tool.pixi.feature.dev.dependencies]
pre-commit = "*"

[tool.pixi.feature.engines.dependencies]
# this conflicts with AmberTools because of NumPy 2.3,
# so cannot use this feature group alongside ambertools or mosdef features
gromacs = "*"
lammps = ">=2024.08.29"
numpy = ">=2.3"

# a separate feature group for things that don't fit nicely into the other categories
[tool.pixi.feature.etc.dependencies]
# a Packmol install separate from AmberTools is needed to test PBCs
packmol = ">=20.15.0"
smirnoff-plugins = "2025.*"

[tool.pixi.feature.examples.dependencies]
nbval = "*"
mdtraj = "*"
packmol = "*"
nglview = "*"
jax = "*"

[tool.pixi.feature.mosdef.dependencies]
mbuild-base = "*"
foyer = "*"
numpy = "<2.3"
# arguably ought to stay in engines group, but Foyer and GROMACS are tightly coupled and
# bringing in AmberTools causes huge messes
gromacs = "*"

[tool.pixi.feature.openeye.dependencies]
openeye-toolkits = "*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.regression_tests.dependencies]
deepdiff = "<=8"
rich = ">=14.0.0,<15"
click = ">=8.1.8,<9"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-randomly = "*"
intermol = "*"
nglview = "*"
jax = "*"
pyedr = "*"
openff-nagl-base = "*"
openff-nagl-models = "*"

[tool.pixi.feature.typing.dependencies]
mypy = "*"
pandas-stubs = "*"

[tool.pixi.pypi-dependencies]
openff-packmol = { git = "https://github.com/openforcefield/openff-packmol.git" }

[tool.pixi.tasks]
postinstall = "pip install -e . plugins/"
run_mypy = { cmd = "python -m mypy -p 'openff.interchange'", depends-on = "postinstall" }
run_tests = { cmd = "python -m pytest openff/interchange/ -x --durations=20 -n logical", depends-on = "postinstall" }
run_examples = { cmd = "python -m pytest examples/ -x -n logical --durations=20 --nbval-lax --dist loadscope -p no:randomly", depends-on = "postinstall" }
run_regression_tests = { cmd = "sh devtools/scripts/run_regression_tests.sh", depends-on = "postinstall" }

[tool.pixi.workspace]
channels = [ "conda-forge", "openeye" ]
platforms = [ "linux-64", "osx-arm64" ]
