[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm>=8",
]

[project]
name = "openff-interchange"
description = "A project (and object) for storing, manipulating, and converting molecular mechanics data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
[[project.authors]]
name = "Open Force Field Initiative"
email = "info@openforcefield.org"

[tool.setuptools.packages.find]
include = [ "openff.interchange*" ]
exclude = [ "openff.interchange._tests.data*" ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 119
namespace-packages = [ "openff/interchange/" ]
[tool.ruff.lint]
select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]
per-file-ignores."plugins/*" = [ "INP001" ]
isort.known-first-party = [ "openff.interchange" ]
# can't find a clean way to get Rust's globset to handle this via regex ...
isort.known-third-party = [ "openff.toolkit", "openff.utilities", "openff.units" ]
pydocstyle.property-decorators = [ "validator" ]

[tool.pyproject-fmt]
max_supported_python = "3.13"
table_format = "long"

[tool.mypy]
mypy_path = "stubs/"
python_version = "3.11"
plugins = "pydantic.mypy"
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true
exclude = "openff/interchange/_tests"
[[tool.mypy.overrides]]
module = [
  "pyedr",
  "networkx",
  "openmm",
  "openmm.app",
  "openmm.app.element",
  "openmm.unit",
  "intermol.*",
  "rdkit",
  "openff.toolkit.*",
  "openff.units.*",
  "openff.utilities.*",
  "openff.recharge.*",
  "openff.nagl_models.*",
  "openff.packmol.*",
  "parmed",
  "parmed.amber",
  "pmdtest.utils",
  "pytest",
  "pint",
  "unyt",
  "openeye",
  "jax",
  "scipy.spatial",
  "nonbonded_plugins.*",
  "lammps",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--cov=openff/interchange --cov-report=xml --ignore=examples/experimental --ignore=examples/amber"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]
[tool.coverage.run]
omit = [
  "*/*/_tests/*",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = true
ignore-regex = [ "^Test.*", "test_.*", "^_.*" ]
fail-under = 90
